# tomlpatch

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml
tests/: test_toml_patch.py
tests/data/: Cargo.patch.json  Cargo.patched.toml  Cargo.toml
toml_patch/: __init__.py  logger.py  main.py
tomlpatch/: __init__.py  logger.py  main.py
